Tue Sep 14 10:39:31 EDT 2010	JK Lowden <jklowden@freetds.org>
	* doc/api_status.txt marked dbiscount OK

Mon Sep 13 22:09:46 EDT 2010	JK Lowden <jklowden@freetds.org>
	* configure.ac use printf, not echo -n
	* include/sybdb.h src/dblib/dblib.c mark dbpoll as unimplemented 

Mon Sep 13 20:53:12 EDT 2010	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c fix error-handler recursion
	* src/apps/tsql.c format errors better

Mon Sep 13 18:32:55 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/sybdb.h src/dblib/dblib.c:
	- patch from LacaK
	 1. in dbsetlversion() fixes DBVER60 case and adds support for 
	    DBVERSION_71 and DBVERSION_72
	 2. adds dbiscount() which is Microsoft specific DB-Library function
	 3. in dbcolinfo() adds support Updatabe and Identity fields in DBCOL structure

Thu Sep  2 12:35:00 CDT 2010   Craig A. Berry <craigberry@mac.com>
        * Find the system poll and poll.h on VMS.
        * vms/config_h.vms

Wed Sep  1 10:39:43 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_public.h.in src/odbc/unittests/common.h:
	* src/odbc/unittests/freeclose.c win32/winlogin.c win32/winsetup.c:
	- Remove warnings for MingW64

Wed Aug 18 13:37:35 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/prepare_win32.sh: search correct host

Wed Aug 18 13:27:30 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/replacements.h: add missing declaration

Tue Aug 17 15:15:57 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h win32/FreeTDS_w.def win32/Makefile.am:
	* win32/msvc6/FreeTDS.dsp win32/msvc6/libTDS.dsp:
	- fix compile problem with msvc6

Tue Aug 10 09:40:00 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac m4/acx_pthread.m4: fix compile with HP-UX compiler

Thu Aug  5 11:24:51 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: use fakepoll

Thu Aug  5 10:58:27 CEST 2010    Frediano Ziglio <freddy77_A_gmail_D_com>