@@ -1,3 +1,8 @@
+Tue Sep 14 23:49:49 EDT 2010	JK Lowden <jklowden@freetds.org>
+	* src/dblib/dblib.c
+	* src/dblib/unittests/t0007.c src/dblib/unittests/t0007.sql
+	- add VARYBINBIND and BINARYBIND testing (seem broken)
+
 Tue Sep 14 10:39:31 EDT 2010	JK Lowden <jklowden@freetds.org>
 	* doc/api_status.txt marked dbiscount OK
 
@@ -2868,4 +2873,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3121 2010-09-14 14:40:42 jklowden Exp $
+$Id: ChangeLog,v 1.3122 2010-09-15 03:55:44 jklowden Exp $
